# prod-flet

./: .gitignore  README.md  gen_desk.sh  genmo.sh  genpo.sh  pyproject.toml  requirements.txt  run_kassa.sh
.github/workflows/: android.yml  ios.yml
locale/en_US/LC_MESSAGES/: prod.po
locale/ru_RU/LC_MESSAGES/: prod.po
src/: background_tasks.py  camera.py  db_connector.py  http_connector.py  log_tools.py  main.py  products_dialog.py  settings_dialog.py  translation.py
src/hardware/: mer328ac.py
src/ui/: control_basket.py  dialog_about.py  dialog_customer.py  dialog_documents.py  dialog_products.py  dialog_settings.py
storage/: README.md
