[project]
name = "prod"
version = "1.0.0"
description = "prod client"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "flet>=0.27.6",
  #"flet-permission-handler>=0.0.1",
  "flet-permission-handler @ git+https://github.com/flet-dev/flet-permission-handler.git",
  "opencv-python>=4.10.0",
  #"zxing_cpp>=2.3.0",
  "requests>=2.32.3",
  "pyserial>=3.5",
  #"pypdf>=5.4.0"
  #"pillow>=10.2.0",
  #"pyzbar>=0.1.9",
  #"libzbar0t64>=0.23"
]

[tool.flet]
ndk.dir="~/Android/Sdk/ndk/25.1.8937393"
sdk.dir="~/Android/Sdk"

org = "com.github.usermicrodevices"
# shown in window titles and about app dialogs on desktop.
product = "prod-client"
# company name to display in about app dialogs
company = "prod"
# copyright text to display in about app dialogs
copyright = "github.com/usermicrodevices/prod"
permissions = ["camera"]

[tool.flet.app]
path = "src"

[tool.flet.android.permission]
"android.permission.CAMERA" = true

[tool.flet.android.feature]
"android.hardware.camera" = true
