[project]
name = "prod-flet"
version = "1.0.9"
description = "prod client"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "flet>=0.27.6",
  "requests>=2.32.3",
  "pyserial>=3.5",
  'opencv-python>=4.10.0 ; platform_system != "Android"',
  'fletzxing @ git+https://github.com/usermicrodevices/fletzxing.git; platform_system=="Android"',
  "flet-permission-handler @ git+https://github.com/flet-dev/flet-permission-handler.git",
  #"flet-permission-handler>=0.0.1",
  #"pypdf>=5.4.0",
  #"pillow>=10.2.0"
]

[tool.flet]
ndk.dir="~/Android/Sdk/ndk/25.1.8937393"
sdk.dir="~/Android/Sdk"

org = "com.github.usermicrodevices"
product = "prod-client"
company = "prod"
copyright = "github.com/usermicrodevices/prod-flet"
permissions = ["camera"]

[tool.flet.app]
path = "src"

[tool.flet.android.permission]
"android.permission.CAMERA" = true

[tool.flet.android.feature]
"android.hardware.camera" = true

[tool.fletzxing.android]
url = "https://github.com/usermicrodevices/fletzxing.git"
path = "src/flutter/flet_zxing"
ref = "main"
